- fixed bug with inserting two variable bounds of the same type on the same variable with the same bounding variable
  but with different sign of coefficient (e.g., x <= 10*z + 5 and x <= -5*z + 10); in previous version, one of the
  two was removed, although both have a useful meaning; now, we keep both, and detect a stronger global bound in
  the implication graph presolving


SCIP version 0.82
=================

compiling:
- removed ncurses and pthread libraries from the Makefile; pthread is now only linked if CPLEX is used

interface:
- new method SCIPsolveProbingLPWithPricing()
- new methods SCIPcolGetMinPrimsol() and SCIPcolGetMaxPrimsol()
- new method SCIPgetColRedcost()
- new method SCIPvarGetRootRedcost()
- new methods SCIPgetLPRootObjval(), SCIPgetLPRootColumnObjval(), and SCIPgetLPRootLooseObjval()
- new methods SCIPchgVarLbRoot() and SCIPchgVarUbRoot()
- new method SCIPinRepropagation()
- new methods SCIPgetAvgPseudocostScore(), SCIPgetAvgPseudocostScoreCurrentRun(), SCIPgetAvgConflictScore(),
  SCIPgetAvgConflictScoreCurrentRun(), SCIPgetAvgInferenceScore(), SCIPgetAvgInferenceScoreCurrentRun(),
  SCIPgetAvgCutoffScore(), and SCIPgetAvgCutoffScoreCurrentRun()
- new methods SCIPaddDialogInputLine() and SCIPaddDialogHistoryLine()
- method SCIPgetNConflictClausesFound() renamed to SCIPgetNConflictConssFound()
- method SCIPgetNConflictClausesFoundNode() renamed to SCIPgetNConflictConssFoundNode()
- method SCIPgetNConflictClausesApplied() renamed to SCIPgetNConflictConssApplied()
- new method SCIPgetFocusDepth()
- methods SCIPisLbBetter() and SCIPisUbBetter() have an additional parameter and slightly different meaning
  (they now compare the bound improvement *relatively* to the width of the domain and the bound itself)
- new solution status code SCIP_STATUS_STALLNODELIMIT
- slightly modified semantics of the CONSINITLP callback in the constraint handlers